k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quotes-app
    tier: backend
    environment: dev
  name: mongo-service
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo-controller
