k8s/mongo_nodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    app: quotes-app
    tier: backend
    environment: dev
spec:
  type: NodePort
  ports:
    - nodePort: 30001
      port: 27017
      targetPort: 27017
      protocol: TCP
      name: http
  selector:
    run: mongo
    tier: backend
    environment: dev
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongo-deployment
  labels:
    run: mongo
    tier: backend
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mongo
      tier: backend
      environment: dev
  template:
    metadata:
      labels:
        run: mongo
        tier: backend
        environment: dev
    spec:
      containers:
      - name: mongo
        image: mongo:3.6.4
        ports:
        - containerPort: 27017
