k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: quotes-app-service
  labels:
    app: quotes-app
    tier: backend
    environment: dev
spec:
  # type: NodePort
  selector:
    app: quotes-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
    # - nodePort: 30001
    #   port: 3000
    #   targetPort: 3000
    #   protocol: TCP
    #   name: http
  #type: LoadBalancer
